--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -126,10 +126,10 @@ spring:
           storage_engine: innodb
         format_sql: false
         hbm2ddl.auto: none
-#  flyway:
-#    enabled: true
-#    validate-migration-naming: true
-#    locations: classpath:db/migration/common, classpath:db/migration/sample
+  flyway:
+    enabled: true
+    validate-migration-naming: true
+    locations: classpath:db/migration/common, classpath:db/migration/sample
     # set clean-on-validation-error to true if you get flyway validation error during application startup
     # this will clear the databases up and re-migrate from the scratch
     clean-on-validation-error: true
@@ -166,10 +166,10 @@ spring:
           storage_engine: innodb
         format_sql: false
         hbm2ddl.auto: none
-#  flyway:
-#    enabled: true
-#    validate-migration-naming: true
-#    locations: classpath:db/migration/common, classpath:db/migration/sample
+  flyway:
+    enabled: true
+    validate-migration-naming: true
+    locations: classpath:db/migration/common, classpath:db/migration/sample
     # set clean-on-validation-error to true if you get flyway validation error during application startup
     # this will clear the databases up and re-migrate from the scratch
     clean-on-validation-error: true
